添加按照分类归档插件

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -30,6 +30,10 @@
           <a href="/">关于我</a>
         </div>
         <div class="widget">
+          <h1>分类归档</h1>
+          {% include categories.html root=site.data.categories %}
+        </div>
+        <div class="widget">
           <h1>时间归档</h1>
           {% include timeline.html %}
         </div>
