优化文章正文字体

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -15,6 +15,7 @@
     <link rel="apple-touch-icon" sizes="114x114" type="image/png" href="/resource/image/apple-icon-114x114.png" />
 
     <link rel="stylesheet" type="text/css" href="/resource/style/iKnowledge.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/resource/style/article.css" media="screen" />
   </head>
   <body>
     <a name="top"></a>
