--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="/resource/style/iKnowledge.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/resource/style/article.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/resource/style/highlight.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/resource/style/category.css" media="screen" />
   </head>
   <body>
     <a name="top"></a>
