--- a/resource/style/iKnowledge.css
+++ b/resource/style/iKnowledge.css
@@ -67,7 +67,7 @@ a:hover {
     line-height: 1.5em;
     list-style-type: none;
     list-style-position: outside;
-    list-style-image: url(/image/arrow.png);
+    list-style-image: url(../image/arrow.png);
 }
 
 /* 正文 */
