把修改历史样式从全局移到文章

--- a/resource/style/article.css
+++ b/resource/style/article.css
@@ -46,3 +46,17 @@
 #article ul li {
     list-style-type: disc;
 }
+
+#log {
+    padding-top: 1em;
+    font-size: small;
+    text-align: right;
+}
+
+#log .record {
+    margin: 0.5em 0em;
+}
+
+#log .timestamp {
+    color: #999999;
+}
