为Redcarpet生成的表格设置class，避免全局样式影响gist表格

--- a/resource/style/article.css
+++ b/resource/style/article.css
@@ -48,12 +48,12 @@
 }
 
 /* 表格 */
-#article table {
+.content-table {
     border-collapse: collapse;
     empty-cells: show;
 }
 
-#article th, #article td {
+.content-table th, .content-table td {
     border: 1px solid black;
     padding: 5px;
 }
