添加“定义列表”样式

--- a/resource/style/article.css
+++ b/resource/style/article.css
@@ -47,6 +47,19 @@
     list-style-type: disc;
 }
 
+#article dl {
+    margin: 0px;
+}
+
+#article dt {
+    margin: 0.8em 0em 0.4em 1em;
+    font-weight: bold;
+}
+
+#article dd {
+    margin: 0.4em 0em 0.4em 2em;
+}
+
 /* 表格 */
 .content-table {
     border-collapse: collapse;
