--- a/_layouts/iKnowledge.html
+++ b/_layouts/iKnowledge.html
@@ -21,6 +21,7 @@
 
     <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=1192214979" type="text/javascript" charset="utf-8"></script>
     <script language="JavaScript" type="text/javascript" src="/resource/script/iKnowledge.js"></script>
+    <script language="JavaScript" type="text/javascript" src="http://www.google-analytics.com/ga.js"></script>
   </head>
   <body>
     <a name="top"></a>
