归档页面显示该分类简介

--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,6 +2,7 @@
 layout: iKnowledge
 style: archive
 ---
+<p>{{ page.excerpt }}</p>
 <div id="archive">
   {% for post in page.posts %}
   <div class="post">
