提供每篇文章所属类型

--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -2,6 +2,12 @@
 layout: iKnowledge
 style: article
 ---
+<div class="tags">
+  关键字：
+  {% for tag in page.tags %}
+  <a href="/archive/{{ tag.id }}.html">{{ tag.name }}</a>
+  {% endfor %}
+</div>
 <div id="article">
   {{ content }}
 </div>
